# PaymentService

./: Cargo.toml  accounts.csv  transactions.csv
src/: main.rs
src/domain/: accounting.rs  mod.rs  models.rs  reader.rs  transactions.rs
src/service/: mod.rs  reader.rs
src/storage/: accounting.rs  mod.rs  transactions.rs
